WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 194024
[GTK][Wayland] REGRESSION(
r240712
): Clear the GL context if it's the current one on dispose
https://bugs.webkit.org/show_bug.cgi?id=194024
Summary
[GTK][Wayland] REGRESSION(r240712): Clear the GL context if it's the current ...
Carlos Garcia Campos
Reported
2019-01-30 09:28:09 PST
I'm getting crashes otherwise in gdk_gl_context_dispose(). Thread 1 (Thread 0x7fffe9df1bc0 (LWP 16839)): #0 0x00007ffff7450ceb in g_datalist_lock (datalist=0x55555680fea0) at ../glib/gdataset.c:209 #1 g_datalist_id_dup_data (datalist=datalist@entry=0x55555680fea0, key_id=54, dup_func=dup_func@entry=0x0, user_data=user_data@entry=0x0) at ../glib/gdataset.c:856 #2 0x00007ffff7450d69 in g_datalist_id_get_data (datalist=datalist@entry=0x55555680fea0, key_id=<optimized out>) at ../glib/gdataset.c:801 #3 0x00007ffff7556a7e in g_object_unref (_object=<optimized out>) at ../gobject/gobject.c:3276 #4 g_object_unref (_object=0x55555680fe90) at ../gobject/gobject.c:3238
Attachments
Patch
(1.55 KB, patch)
2019-01-30 09:30 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-01-30 09:30:36 PST
Created
attachment 360587
[details]
Patch
WebKit Commit Bot
Comment 2
2019-01-30 12:04:19 PST
Comment on
attachment 360587
[details]
Patch Clearing flags on attachment: 360587 Committed
r240723
: <
https://trac.webkit.org/changeset/240723
>
WebKit Commit Bot
Comment 3
2019-01-30 12:04:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug