[GTK][Wayland] REGRESSION(r240712): Clear the GL context if it's the current one on dispose https://bugs.webkit.org/show_bug.cgi?id=194024

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2019-01-30
Reviewed by Michael Catanzaro.

Fixes a crash in gdk_gl_context_dispose().

* UIProcess/gtk/AcceleratedBackingStoreWayland.cpp:
(WebKit::AcceleratedBackingStoreWayland::~AcceleratedBackingStoreWayland):

Canonical link: https://commits.webkit.org/208514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240723 268f45cc-cd09-0410-ab3c-d52691b4dbfc